--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="lib/src/js/element-builder.js"></script>
     <!-- <script type="text/javascript" src="lib/src/js/layout-manager.js"></script> -->
     <script type="text/javascript" src="lib/src/js/scroll-manager.js"></script>
-    <script type="text/javascript" src="lib/src/js/document-controls.js"></script>
+    <script type="text/javascript" src="lib/src/js/export-json.js"></script>
     <script type="text/javascript" src="lib/src/js/rotate-canvas.js"></script>
     <script type="text/javascript" src="lib/src/js/palette-manager.js"></script>
     <script type="text/javascript" src="lib/src/js/canvas-addItems.js"></script>
@@ -412,14 +412,28 @@
         </div>
     </div>
     
+    <div id="warning-message-wrap">
+        <div id="warning-message" class="_50_m">
+            <h3>Warning</h3>
+            <p>Changing the orientations of your canvas will may give you unexpected results with the content of you canvas</p>
+            <div class="p_m _50_s">
+                <button id="warning-cancel" class="button round-sd txt_sm fl_rt" style="background:#ffa45a">CANCEL</button>
+            </div>            
+            <div class="p_m _50_s">
+                <button id="warning-proceed"  class="button round-sd txt_sm fl_lt">PROCEED</button>
+            </div>
+        </div>
+    </div>
+
     <div id="fb-root" class="hidden"></div>
 
 <script type="text/javascript"> 
-    var pages = []; 
-    var productData = [];
-    var layoutData = [];
-    var cropMarks = [];
-    var currentPageRef = '0';
+    var pages = [],  
+        productData = [],
+        layoutData = [],
+        cropMarks = [],
+        currentPageRef = '0',
+        todaysDate = '';
 </script>
 
 <script type="text/javascript">
