--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Fabric UI | Adam Lawrence</title>
+    <title>Gift Items | Canvas</title>
     
     <link rel="shortcut icon" href="img/logo.png">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,500italic|Open+Sans:400,300,700,600,300italic' rel='stylesheet' type='text/css'>
@@ -400,7 +400,6 @@
             </div>
         </div>
     </div>
-
     <div id="fb-root" class="hidden"></div>
 
 <script type="text/javascript"> 
@@ -446,17 +445,8 @@ $(function()
     $('main').css('height', window.innerHeight - ($('header').height()+10) + 'px');
 
     appInitialise = new AppInit(userInfo, website, type, productId, layoutId);
-
 });
 
-/*
-    website = window.location.href.slice(window.location.href.search('webpage=')+8, window.location.href.search('userId')-2);
-    userId = window.location.href.slice(window.location.href.search('userId=')+7, window.location.href.search('userName')-2);
-    userName = window.location.href.slice(window.location.href.search('userName=')+9, window.location.href.search('type')-2);
-    type = window.location.href.slice(window.location.href.search('type=')+5, window.location.href.search('productId')-2);
-    productId = window.location.href.slice(window.location.href.search('productId=')+10, window.location.href.search('layoutId')-2);
-    layoutId = window.location.href.slice(window.location.href.search('layoutId=')+9, window.location.href.search('end')-1);
-*/
 </script>
 
     
