--- a/index.html
+++ b/index.html
@@ -443,6 +443,8 @@ $(function()
     layoutId = window.location.href.slice(window.location.href.search('layoutId=')+9, window.location.href.search('&jsonId'));
     jsonId = window.location.href.slice(window.location.href.search('jsonId=')+7, window.location.href.search('&end')); 
     
+    console.log('firstName: ', firstName)
+
     // JSON ID = 
     userInfo = {
                     'userId': userId,
